--- a/CodeSangam/css/homepage.css
+++ b/CodeSangam/css/homepage.css
@@ -45,8 +45,10 @@
     width: 100%;
     padding: 7% 15%;
     background-image: url('../Image/homepage_bkg.png');
+    /* 
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    */
     text-align: center;
 }
 
