--- a/template/views/viewExpense.ejs
+++ b/template/views/viewExpense.ejs
@@ -11,36 +11,37 @@
     <link rel="icon" type="image/x-icon" href="/images/edit.png">
   </head>
   <body>
-    <div class="container"><table class="table">
+    <div  class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px;align-self: center;" >
+      <a href="/html/page1.html"><button type="button" class="btn btn-primary" style="text-align: center;">Home</button></a>
+    </div>
+    <div class="container mt-5 shadow-lg p-5" style="width:50%"><table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
+          
+          <th scope="col">Expense</th>
+          <th scope="col">Amount</th>
+          <th scope="col">Category</th>
+          <th>Saving Remaining</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-        </tr>
+        <% if(found === true) { %>
+            <% record.forEach(function(details){ %>
+              <tr>
+                <td><%= details.expense %></td>
+                <td><%= details.amount %></td>
+                <td><%= details.category %></td>
+              </tr>
+            <% }) %>
+        <% } else { %>
+          <h1>No data found!!</h1>
+        <% } %>
       </tbody>
     </table></div>
-
+    <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px; align-self: center;" >
+      <a href="/html/addExpense.html"><button action="button" class="btn btn-primary">Add Expense</button></a> 
+    </div>
+    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
