--- a/template/views/viewExpense.ejs
+++ b/template/views/viewExpense.ejs
@@ -9,10 +9,11 @@
     
     <title>BillBuddy</title>
     <link rel="icon" type="image/x-icon" href="/images/edit.png">
+    <link rel="stylesheet" href="/css/viewExpense.css">
   </head>
   <body>
     <div  class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px;align-self: center;" >
-      <a href="/html/page1.html"><button type="button" class="btn btn-primary" style="text-align: center;">Home</button></a>
+      <a href="/html/page1.html"><button type="button" class="btn btn-primary primary-button" style="text-align: center;">Home</button></a>
     </div>
     <div class="container mt-5 shadow-lg p-5" style="width:50%"><table class="table">
       <thead>
@@ -39,7 +40,7 @@
       </tbody>
     </table></div>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px; align-self: center;" >
-      <a href="/html/addExpense.html"><button action="button" class="btn btn-primary">Add Expense</button></a> 
+      <a href="/html/addExpense.html"><button action="button" class="btn btn-primary primary-button">Add Expense</button></a> 
     </div>
     
     
