--- a/template/views/stats.ejs
+++ b/template/views/stats.ejs
@@ -11,11 +11,12 @@
 
     <title>BillBuddy</title>
     <link rel="icon" type="image/x-icon" href="/Image/edit.png">
+    <link rel="stylesheet" href="/css/stats.css">
 </head>
 
 <body>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px;align-self: center;">
-        <a href="/page1/<%= name %>"><button type="button" class="btn btn-primary"
+        <a href="/page1/<%= name %>"><button type="button" class="btn btn-primary primary-button"
                 style="text-align: center;">Home</button></a>
     </div>
     <div class="container mt-5 shadow-lg p-5" style="width:50%">
@@ -60,7 +61,7 @@
 
     </div>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px; align-self: center;">
-        <a href="/addExpense/<%= name %>"><button action="button" class="btn btn-primary">Add Expense</button></a>
+        <a href="/addExpense/<%= name %>"><button action="button" class="btn btn-primary primary-button">Add Expense</button></a>
     </div>
     <div class="card" style="width: 18rem;">
         <div class="card-body">
