--- a/template/views/viewGroup.ejs
+++ b/template/views/viewGroup.ejs
@@ -11,6 +11,7 @@
 
     <title>BillBuddy</title>
     <link rel="icon" type="image/x-icon" href="/Image/edit.png">
+    <link rel="stylesheet" href="/css/viewExpense.css">
 </head>
 
 <body>
