button Updated stats.js

--- a/template/views/stats.ejs
+++ b/template/views/stats.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px;align-self: center;">
-        <a href="/page1/<%= name %>"><button type="button" class="btn btn-primary primary-button"
+        <a href="/page1/<%= userName %>"><button type="button" class="btn btn-primary primary-button"
                 style="text-align: center;">Home</button></a>
     </div>
     <div class="container mt-5 shadow-lg p-5" style="width:50%">
@@ -61,7 +61,7 @@
 
     </div>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px; align-self: center;">
-        <a href="/addExpense/<%= name %>"><button action="button" class="btn btn-primary primary-button">Add Expense</button></a>
+        <a href="/stocks/<%= userName %>"><button action="button" class="btn btn-primary primary-button">Stocks</button></a>
     </div>
     <div class="card" style="width: 18rem;">
         <div class="card-body">
