--- a/template/views/stocks.ejs
+++ b/template/views/stocks.ejs
@@ -20,7 +20,7 @@
                 <form action="/delete/<%= name %>" method="post">
                     <div class="item">
                         <input type="checkbox" name="checkbox" value="<%= stock._id %>" onchange="this.form.submit()">
-                        <a href="/stats/<%= stock.shares %>">
+                        <a href="/stats/<%= name %>/<%= stock.shares %>">
                             <p>
                                 <%= stock.shares %>
                             </p>
