--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,25 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&family=Oldenburg&display=swap');
 
+:root{
+
+  --background-image: url('../Image/homepage_bkg.png');
+  
+
+}
+.dark-mode{
+  --background-image: url('../Image/homepage_bkg_dark.png');
+  
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Montserrat;
 
-    
-    
-}
-body{
-  background-image: url('../Image/homepage_bkg.png');
+
+
+
 }
 
+.body{
+    background-image: var(--background-image);
+    background-repeat: none;
+    background-size: cover;
+    
+}
+
+#icon{
+  margin-left: 30px;
+  width: 45px;
+  height: 30px;
+  cursor: pointer;
+  align-self: center;
+}
 .header{
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 20px 100px;
-  background: #1f96e6;
+  background: #E99F4C;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -133,3 +155,73 @@ body{
     color: #264143;
     padding: 5px;
   }
+.toggle-btn{
+    align-items: center;
+    display: flex;
+    margin-left: 10px;
+}
+.toggle-label{
+    width:4rem;
+    height: 2.5rem;
+    background-color:#064b79;
+    display: inline-block;
+    position: relative;
+    border-radius: 10rem;
+}
+
+#checkbox{
+    visibility: hidden;
+}
+
+.toggle-ball{
+    width:1.5rem;
+    height: 1.5rem;
+    border-radius:50%;
+    background-color: white;
+    display: inline-block;
+    position: relative;
+    top: .5rem;
+    left: .5rem;
+    transition: all .2s linear;
+}
+
+#checkbox:checked + .toggle-label .toggle-ball{
+    background-color: gray;
+    transform: translateX(1.6rem);
+}
+
+/*  */
+/* actions */
+  
+/* .theme-switch__checkbox:checked + .theme-switch__container {
+  background-color: var(--container-night-bg);
+}
+  
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container {
+  left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter));
+}
+  
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container:hover {
+  left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter) - 0.187em)
+}
+  
+.theme-switch__circle-container:hover {
+  left: calc(var(--circle-container-offset) + 0.187em);
+}
+  
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__moon {
+  -webkit-transform: translate(0);
+  -ms-transform: translate(0);
+  transform: translate(0);
+}
+  
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__clouds {
+  bottom: -4.062em;
+}
+  
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__stars-container {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+} */ 
