--- a/template/views/viewExpense.ejs
+++ b/template/views/viewExpense.ejs
@@ -9,10 +9,11 @@
     
     <title>BillBuddy</title>
     <link rel="icon" type="image/x-icon" href="/images/edit.png">
+    <link rel="stylesheet" href="/css/viewExpense.css">
   </head>
   <body>
     <div  class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px;align-self: center;" >
-      <a href="/html/page1.html"><button type="button" class="btn btn-primary" style="text-align: center;">Home</button></a>
+      <a href="/page1/<%= name%>/<%= email%>"><button type="button" class="btn btn-primary primary-button" style="text-align: center;">Home</button></a>
     </div>
     <div class="container mt-5 shadow-lg p-5" style="width:50%"><table class="table">
       <thead>
@@ -21,7 +22,7 @@
           <th scope="col">Expense</th>
           <th scope="col">Amount</th>
           <th scope="col">Category</th>
-          <th>Saving Remaining</th>
+          <!-- <th>Saving Remaining</th> -->
         </tr>
       </thead>
       <tbody>
@@ -29,22 +30,31 @@
             <% record.forEach(function(details){ %>
               <tr>
                 <td><%= details.expense %></td>
-                <td><%= details.amount %></td>
-                <td><%= details.category %></td>
+                <td class="amount"><%= details.amount %></td>
+                <td class="category"><%= details.category %></td>
               </tr>
             <% }) %>
         <% } else { %>
-          <h1>No data found!!</h1>
+          <h1 style="text-align: center;">No data found!!</h1>
         <% } %>
       </tbody>
     </table></div>
     <div class="container mt-5" style="width:30%; border-radius: 5px; padding-left: 100px; align-self: center;" >
-      <a href="/html/addExpense.html"><button action="button" class="btn btn-primary">Add Expense</button></a> 
+      <a href="/addExpense/<%= name%>"><button action="button" class="btn btn-primary primary-button">Add Expense</button></a> 
     </div>
+    <% if (found===true) { %>
+      <div class="card" style="width: 22rem; border-radius: 50px; margin-left: 38%; margin-top: 1.5%;">
+        <div class="card-body">
+          <canvas id="myChart"></canvas>
+        </div>
+      </div>
+      <% } %>
+  
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript" src="/js/graphs.js"></script>
 
   </body>
 </html>
